clusters/TrueNas-Int/deployments/downloads/syncthing/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: 'syncthing/syncthing:1.27.8'
          resources:
            limits:
              memory: 1Gi
              cpu: '4'
          volumeMounts:
            - name: appdata
              mountPath: /var/syncthing
              subPath: SyncThing/Config
            - name: bigpool-appdata
              mountPath: /Data-BigPool
              subPath: SyncThing/Data
            - name: bigpool-appdata
              mountPath: /Data-FastPool
              subPath: SyncThing/Data
      volumes:
        - name: fastpool-appdata
          nfs:
            server: 172.16.1.10
            path: /mnt/FastPool/AppData
        - name: bigpool-appdata
          nfs:
            server: 172.16.1.10
            path: /mnt/BigPool/AppData
        - name: media
          nfs:
            server: 172.16.1.10
            path: /mnt/BigPool/Media
