clusters/TrueNas-Int/deployments/downloads/syncthing/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: syncthing
spec:
    selector:
        app: syncthing
    ports:
        - name: http
          port: 8384
          targetPort: 8384
          protocol: TCP
        - name: listen
          port: 22000
          targetPort: 22000
          protocol: TCP
        - name: discover
          port: 22000
          targetPort: 22000
          protocol: UDP
